# ReBarUEFI

./: .gitignore  LICENSE  README.md  ReBar.c  ReBar.dsc  ReBar.inf  ReBarDxe.inf  ReBarTest.inf  buildffs.py  geniso.sh
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ReBarDxe.yml  ReBarState.yml  buildffs.bat  buildffs.sh
ReBarDxe/: ReBar.c  ReBar.dsc  ReBarDxe.inf  ReBarTest.inf  buildffs.py
ReBarDxe/include/: PciHostBridgeResourceAllocation.h  pciRegs.h
ReBarState/: CMakeLists.txt  ReBarState.cpp
UEFIPatch/: BdwUSB3.txt  HswAbove4G.txt  HswUSB3.txt  IvyUSB3.txt  patches.txt
board/gigabyte/b75m-d3h/: f16.c
include/: board.h  ioPort.h
tools/: uuidconv.py
